--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ certifi==2017.7.27.1      # via requests
 chardet==3.0.4            # via requests
 idna==2.6                 # via requests
 requests==2.20.0
-urllib3==1.24.2           # via requests
+urllib3>=1.26.5           # via requests
 
